--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     
         <div class="centro">
 
+            <div class="barra_invisivel" for="barra_pesquisa" >
+
+            </div>
             <form action="https://google.com/search" method="get">
 
-                    <input type="text" name="q" class="barra_pesquisa" placeholder="         Pesquise algo..." required>
+                    <input type="text" name="q" class="barra_pesquisa" placeholder="Pesquise algo..." required>
 
             </form>
             
