--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aba inicial do Google</title>
+    <title>Nova guia</title>
     <link rel="stylesheet" href="./src/style/style.css">
 </head>
 <body>
