--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nova guia</title>
     <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="icon" type="image/x-icon" href="./src/img/Chrome-icon.png">
 </head>
 <body>
+
+    <div class="gmail_img">
+        <a href="https://mail.google.com/mail/?tab=rm&ogbl" class="gmail">Gmail</a>
+        <a href="https://www.google.com/imghp?hl=pt-BR&tab=ri&ogbl" class="imagens">Imagens</a>
+        <img src="./src/img/al-icon.png" class="icon_opcoes">
+    </div>
+
     <div class="foto_pesquisa">
 
         <div class="google">
