--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="barra_invisivel"></div>
 
-            <form action="https://google.com/search" method="get">
+            <form action="https://google.com/search" method="get" class="formulario">
                 <input type="text" name="q" class="barra_pesquisa" placeholder="Pesquise algo..." required>
             </form>
             
